Fix: missing border-radius

--- a/src/app/publisher/authors/authors.component.scss
+++ b/src/app/publisher/authors/authors.component.scss
@@ -1,1 +1,9 @@
 @import "../publisher";
+
+.list-item-with-actions
+{
+    div
+    {
+        border-radius: 0.5rem;
+    }
+}
